# midi-play

./: .gitignore  Cargo.toml  backbone.md  clippy.toml  deprecated.txt  observe.txt  package-lock.json  readme.md  rustfmt.toml  todo.md
devlog/: index.md  pilot.1.html  pilot.1.md  pilot.md  template.html  template.tpl
devlog_html/: index.html  pilot.1.html  pilot.html
resources/: clef.ase  clef.aseprite  do_re_.mid  fontface.ase  fontface.aseprite  fontface.json  game_track.mtrk  mc_sweden.mid  metadata.ini  track.aseprite
src/: lib.rs  main.rs  midiplay.rs
src/components/: component.rs  component_render.rs  constants.rs  draw_util.rs  drawing.rs  game_track.rs  menu.rs  mod.rs  note.rs  pallete.rs  playmeter.rs  quality_manager.rs  render_util.rs  sheet.rs  track_library.rs  track_manager.rs  user_interface.rs  util.rs
src/controllers/: game_track.rs  game_track_metadata.rs  input.rs  midi.rs  midiplay.rs  mod.rs  new_game_track.rs  playmeter.rs  quality_manager.rs  record.rs  sheet.rs  track_library.rs  track_manager.rs
src/models/: animation.rs  bit_mode.rs  build_context.rs  clock.rs  config.rs  confirmable.rs  dialogable.rs  draw_state.rs  draw_util.rs  game_mode.rs  game_track.rs  game_track_metadata.rs  input.rs  menu.rs  midi.rs  midiplay.rs  mod.rs  new_game_track.rs  note.rs  note_reporter.rs  pausable.rs  playmeter.rs  quality_manager.rs  record.rs  render_util.rs  restartable.rs  sheet.rs  track_library.rs  track_manager.rs  trackeable.rs  user_interface.rs  user_settings.rs  window_context.rs
src/tests/: common.rs  midiplay.rs  mod.rs
(+61 files in other folders)
