[package]
name = "midi-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "midiplaylib"
path = "src/lib.rs"

[dependencies]
ggez = "0.8.1"
mockall = "0.11.3"
midir = "0.8.0"
midly = "*"
tokio = { version = "1.22.0", features = ["rt", "macros"] }
async-trait = "0.1.59"